[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/PauseMenu/_Scripts/PauseShop.gd" type="Script" id=1]
[ext_resource path="res://Assets/PauseMenu/_Graphics/Fonts/SmallFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/GUI/_Graphics/Fonts/LocationGUI/GUILocationFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/GUI/_Graphics/Fonts/MineralsGUI/MineralsGUIFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/GUI/_Graphics/Fonts/BottomGUI/GUIBottomFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/PauseMenu/_Scenes/Upgrade.tscn" type="PackedScene" id=6]

[node name="PauseShop" type="MarginContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30
script = ExtResource( 1 )
_sections_unfolded = [ "Material", "Size Flags", "Theme", "Visibility", "custom_constants" ]
player = null
upgrade_paths = [ NodePath("HBox/Menu/Upgrades/VBox/MaxSpeed"), NodePath("HBox/Menu/Upgrades/VBox/Acceleration"), NodePath("HBox/Menu/Upgrades/VBox/Damage"), NodePath("HBox/Menu/Upgrades/VBox/FuelTank"), NodePath("HBox/Menu/Upgrades/VBox/Health") ]
mineral_label = NodePath("HBox/Menu/Upgrades/VBox/MarginContainer/Minerals")

[node name="ColorRect" type="ColorRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 30.0
margin_top = 30.0
margin_right = 1890.0
margin_bottom = 1050.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 0.15 )
_sections_unfolded = [ "Margin", "Rect", "Theme" ]

[node name="HBox" type="VBoxContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 30.0
margin_top = 30.0
margin_right = 1890.0
margin_bottom = 1050.0
rect_min_size = Vector2( 0, 150 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Grow Direction", "Margin", "Rect", "Size Flags", "custom_constants" ]

[node name="Resume" type="Label" parent="HBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1860.0
margin_bottom = 34.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
text = "Esc to resume"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Size Flags", "custom_colors", "custom_fonts" ]

[node name="Paused" type="Label" parent="HBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 38.0
margin_right = 1860.0
margin_bottom = 121.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 13
size_flags_vertical = 13
custom_fonts/font = ExtResource( 3 )
text = "Paused!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Size Flags", "custom_fonts" ]

[node name="Menu" type="HSplitContainer" parent="HBox" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 125.0
margin_right = 1860.0
margin_bottom = 1020.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 0
collapsed = false
dragger_visibility = 0
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="PauseOptions" type="MarginContainer" parent="HBox/Menu" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 924.0
margin_bottom = 895.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="VBox" type="VBoxContainer" parent="HBox/Menu/PauseOptions" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 924.0
margin_bottom = 895.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="Upgrades" type="MarginContainer" parent="HBox/Menu" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 936.0
margin_right = 1860.0
margin_bottom = 895.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 25
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Margin", "Mouse", "Rect", "Size Flags", "custom_constants" ]

[node name="VBox" type="VBoxContainer" parent="HBox/Menu/Upgrades" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 25.0
margin_top = 50.0
margin_right = 874.0
margin_bottom = 895.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Anchor", "Focus", "Hint", "Margin", "Mouse", "Rect", "Size Flags" ]

[node name="HBox1" type="HBoxContainer" parent="HBox/Menu/Upgrades/VBox" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 849.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Label" type="Label" parent="HBox/Menu/Upgrades/VBox/HBox1" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 736.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
text = "Upgrades"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Size Flags", "custom_fonts" ]

[node name="Cost" type="Label" parent="HBox/Menu/Upgrades/VBox/HBox1" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 740.0
margin_right = 849.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
text = "Cost"
align = 2
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="MaxSpeed" parent="HBox/Menu/Upgrades/VBox" index="1" instance=ExtResource( 6 )]

margin_top = 58.0
margin_right = 849.0
margin_bottom = 163.0
_sections_unfolded = [ "Anchor", "Rect", "Theme", "custom_constants" ]
upgrade_name = "Max speed"

[node name="Acceleration" parent="HBox/Menu/Upgrades/VBox" index="2" instance=ExtResource( 6 )]

margin_top = 167.0
margin_right = 849.0
margin_bottom = 272.0
upgrade_name = "Acceleration"

[node name="Damage" parent="HBox/Menu/Upgrades/VBox" index="3" instance=ExtResource( 6 )]

margin_top = 276.0
margin_right = 849.0
margin_bottom = 381.0
upgrade_name = "Damage"

[node name="FuelTank" parent="HBox/Menu/Upgrades/VBox" index="4" instance=ExtResource( 6 )]

margin_top = 385.0
margin_right = 849.0
margin_bottom = 490.0
upgrade_name = "Fuel tank"

[node name="Health" parent="HBox/Menu/Upgrades/VBox" index="5" instance=ExtResource( 6 )]

margin_top = 494.0
margin_right = 849.0
margin_bottom = 599.0
upgrade_name = "Health"

[node name="MarginContainer" type="MarginContainer" parent="HBox/Menu/Upgrades/VBox" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 603.0
margin_right = 849.0
margin_bottom = 845.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
_sections_unfolded = [ "Size Flags" ]

[node name="Minerals" type="Label" parent="HBox/Menu/Upgrades/VBox/MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 849.0
margin_bottom = 242.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "Minerals: %s"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "custom_fonts" ]

[node name="Tween" type="Tween" parent="." index="2"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="upgrade_pressed" from="HBox/Menu/Upgrades/VBox/MaxSpeed" to="." method="_on_MaxSpeed_upgrade_pressed"]

[connection signal="upgrade_pressed" from="HBox/Menu/Upgrades/VBox/Acceleration" to="." method="_on_Acceleration_upgrade_pressed"]

[connection signal="upgrade_pressed" from="HBox/Menu/Upgrades/VBox/Damage" to="." method="_on_Damage_upgrade_pressed"]

[connection signal="upgrade_pressed" from="HBox/Menu/Upgrades/VBox/FuelTank" to="." method="_on_FuelTank_upgrade_pressed"]

[connection signal="upgrade_pressed" from="HBox/Menu/Upgrades/VBox/Health" to="." method="_on_Health_upgrade_pressed"]


